--- a/Fashion_MNIST.ipynb
+++ b/Fashion_MNIST.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -27,6 +27,54 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "print(tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Loading dataset\n",
+    "fashion_mnist = keras.datasets.fashion_mnist\n",
+    "(train_imgs,train_labels),(test_imgs,test_labels) = fashion_mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000, 28, 28)\n",
+      "(60000,)\n",
+      "(10000, 28, 28)\n",
+      "(10000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_imgs.shape)\n",
+    "print(train_labels.shape)\n",
+    "print(test_imgs.shape)\n",
+    "print(test_labels.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class_names = ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat', \n",
+    "               'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']"
    ]
   },
   {
